revision-derive/tests/compile_fail/optimised_missing_size.rs
//! Enum variants under `encoding = "optimised"` must declare a size class.
use revision::revisioned;

#[revisioned(revision(1, encoding = "optimised"))]
enum BadEnum {
	WithoutSizeAttribute,
}

fn main() {}
